<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"

        app:cardElevation="8dp"
        app:cardMaxElevation="8dp"
        app:cardCornerRadius="16dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/user_profile"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"

                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/ic_launcher_background"
                android:layout_margin="20dp"
                android:id="@+id/iv_detail_avatar"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/name"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/ilham"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:id="@+id/tv_user_full_name"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/email"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"

                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/ilham_email"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:id="@+id/tv_user_email"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>